# wordflow

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: api.rst  conf.py  count.rst  equal.rst  frequency.rst  index.rst  introduction.rst  length.rst  lessthan.rst  match.rst  order.rst  pluck.rst  put.rst  unique.rst
wordflow/: pipe_guard.py
wordflow/cli/: count.py  equal.py  frequency.py  length.py  lessthan.py  match.py  max.py  min.py  order.py  pluck.py  put.py  reverse.py  unique.py
