[tool.poetry]
name = "wordflow"
version = "0.2.6"
description = ""
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]
readme = "README.md"
documentation = "https://docs.makingwithcode.org/wordflow"

[tool.poetry.dependencies]
python = "^3.10"
wordfreq = "^3.1.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.0.1"
furo = "^2023.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
match = "wordflow.cli.match:main"
lessthan = "wordflow.cli.lessthan:main"
equal = "wordflow.cli.equal:main"
order = "wordflow.cli.order:main"
pluck = "wordflow.cli.pluck:main"
length = "wordflow.cli.length:main"
frequency = "wordflow.cli.frequency:main"
count = "wordflow.cli.count:main"
unique = "wordflow.cli.unique:main"
put = "wordflow.cli.put:main"
